--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://${DBHOSTNAME}:3306/${DBSCHEMA}
+spring.datasource.url=jdbc:mysql://${DBHOSTNAME}:3306/${DBSCHEMA}?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=${DBUSERNAME}
 spring.datasource.password=${DBPASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
